public enum CardType
{
    Attack,
    Skill
}
