public enum GameState
{
    GameStarting,
    TurnStart,
    Turn,
    TurnEnd,
    GameFinish
}
