public enum EffectTarget
{
    User,
    Opponent
}
